- Set navbar to static, so scroll won't affect it - fixed Oops! popup not showing for other pages

--- a/style.css
+++ b/style.css
@@ -142,3 +142,10 @@ a > .fa:hover {
 .fa-user-circle:hover {
   color: green;
 }
+
+#navbar_template {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 1;
+}
